
=======================================================
            WanT code:  Log of Changes 
=======================================================


21 Feb 2009      bug fixed in the documentation of kpoints.f90 (courtesy of
                 Y.P.Wang). (AF)

18 Feb 2009      kpt sorting (and symmetrization) implemented in blc2wan.f90 .
                 (AF and Tonatiuh Rangel)

17 Feb 2009      Bugs fixed in conductor.f90: dos was not computed correctly;
                 conductance array was going out-of-bounds. Bug fixed when
                 reading efermi from input file. Bug fixed when trying to
                 get the .ham fmt in the case of wannier90 files (failure of
                 iotk getting tags). (AF)
                 wfk2etsf.x utility (abinit binary to etsf converter) added to
                 WanT. (Tonatiuh Rangel)

13 Feb 2009      Bug in autoconf found. output of ETSF_IO_LINE in configure.msg
                 removed to workaround the bug. Support of Wannier90 datafiles
                 added, courtesy of Tonatiuh Rangel; related tests added in
                 test11. (AF)
		 Bug fixed in atomic.f90. (Tonatiuh Rangel)

12 Feb 2009      wannier90 fmt supported in transport; etsf_error handler
                 added (according to a former implementation of Conor Hogan).
                 (AF)

10 Feb 2009      Input files for abinit calculations made more standard
                 (thanks to Tonatiuh Rangel). Test03 improved and references
                 updated. Stdout made more clear when selecting DFT datafiles. 
                 ETSF_IO updated to version v1.0.2 . Variable efermi added. (AF)

06 Feb 2009      Makefile system in plugins cleaned up. Bug fixed in mp.f90
                 (mpi extention removed). (AF)

05 Feb 2009      Cleanup in plot.f90 . (AF)

04 Feb 2009      Test06 updated including the calculation of gold chain using
                 Abinit. (AF)
